<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
 <group android:checkableBehavior="single">
    <item
        android:id="@+id/dashboard"
        android:title="@string/dashboard"
        android:icon="@drawable/ic_dashboard"/>
    <item
        android:id="@+id/cart"
        android:title="@string/my_cart"
        android:icon="@drawable/ic_cart"/>
    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"/>
    <item
        android:id="@+id/aboutapp"
        android:title="@string/about_the_app"
        android:icon="@drawable/ic_aboutapp"/>
     <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout"/>
 </group>

</menu>